--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,13 +1,14 @@
 @media (max-width: 480px) {
 	.section {
-		min-height: 75vh;
+		min-height: 80vh;
 	}
 	.header-curve {
 		display: flex;
-	    background: url(../svg/mobileRectangleHeader.svg) no-repeat, 
-            url(../svg/mobileEllipse.svg) no-repeat  65px 327px,
-            url(../svg/mobileEllipse.svg) no-repeat  273px 293px,
-            url(../svg/mobileEllipse.svg) no-repeat  230px 440px;
+	    background: url(../svg/mobileRectangleHeader.svg) no-repeat,
+	    			url(../svg/mobileEllipse.svg) no-repeat  65px 327px,
+            		url(../svg/mobileEllipse.svg) no-repeat  273px 293px,
+            		url(../svg/mobileEllipse.svg) no-repeat  230px 440px;
+		background-size: contain, auto, auto, auto;
 	}
 
 	.bar {
@@ -367,6 +368,7 @@
 		display: flex;
 		flex-direction: column;
 		background: url(../svg/mobileFooterCurve.svg) no-repeat center bottom;
+		background-size: contain;
 	}
 
 	.footer-text {
