--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 1075px;
-    margin: 81px auto 0;
+    margin: 81px auto 150px;
 }
 
 .basic-charact-header p,
@@ -540,6 +540,9 @@ body {
 }
 
 .basic-charact-star {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     background: url(../svg/basicCharStar1.svg) no-repeat left 12.93%,
                 url(../svg/basicCharStar2.svg) no-repeat left bottom,
                 url(../svg/basicCharlogoBCS.svg) no-repeat 8% 77.2%,
@@ -547,13 +550,11 @@ body {
 }
 
 .components {
-    position: absolute;
-    top: 300px;
-    left: 748px;
     max-width: 1005px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-right: 150px;
 }
 
 .item-component {
@@ -628,10 +629,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-}
-
-.support-devices-header {
-    margin: 80px auto 200px;
 }
 
 .support-devices-item {
