--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,7 @@ body {
 .support-devices-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .support-devices-item {
